--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ assert_matches = "1.4.0"
 solana-program-test = "=1.7.8"
 solana-sdk = "=1.7.8"
 solana-validator = "=1.7.8"
+thiserror = "1.0.24"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
+arrayref = "0.3.6"
 
 [lib]
 crate-type = ["cdylib", "lib"]
